#18 add Tree.branchesCondition, Tree.barkCondition
